export class Light {
    on() {
      console.log("💡 Light is ON");
    }
  
    off() {
      console.log("💡 Light is OFF");
    }
  }
  